OpenJMLTest/test/visibilityB/expected
test\visibilityB\org\apache\commons\cli\Option.jml:2044: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == numberOfArgs; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2045: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2055: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == numberOfArgs; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2056: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2075: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.optionalArg == isOptional; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2076: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.optionalArg; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2086: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.optionalArg == isOptional; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2087: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.optionalArg; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2134: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.required == required; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2135: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.required; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2145: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.required == required; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2146: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.required; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2165: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.type == type; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2166: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.type; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2176: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.type == type; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2177: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.type; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2225: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.valuesep == sep; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2226: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.valuesep; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2236: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.valuesep == sep; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2237: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.valuesep; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2285: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == UNINITIALIZED; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2286: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2297: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == 1; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2298: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2310: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2312: error: An identifier with private visibility may not be used in a ensures clause with public visibility
            ensures this.numberOfArgs == 1; 
                        ^
test\visibilityB\org\apache\commons\cli\Option.jml:2315: error: An identifier with private visibility may not be used in a ensures clause with public visibility
            ensures this.numberOfArgs == UNINITIALIZED; 
                        ^
test\visibilityB\org\apache\commons\cli\Option.jml:2323: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2325: error: An identifier with private visibility may not be used in a ensures clause with public visibility
            ensures this.numberOfArgs == 1; 
                        ^
test\visibilityB\org\apache\commons\cli\Option.jml:2328: error: An identifier with private visibility may not be used in a ensures clause with public visibility
            ensures this.numberOfArgs == UNINITIALIZED; 
                        ^
test\visibilityB\org\apache\commons\cli\Option.jml:2341: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == UNLIMITED_VALUES; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2342: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
test\visibilityB\org\apache\commons\cli\Option.jml:2352: error: An identifier with private visibility may not be used in a ensures clause with public visibility
          ensures this.numberOfArgs == UNLIMITED_VALUES; 
                      ^
test\visibilityB\org\apache\commons\cli\Option.jml:2353: error: An identifier with private visibility may not be used in a assignable clause with public visibility
          assignable this.numberOfArgs; 
                         ^
Operation not performed because of parse or type errors
34 errors
